--- a/my-app-1/package.json
+++ b/my-app-1/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "next": "15.4.6",
     "react": "19.1.0",
